refactor(user-service): user entity 변경 및 base entity 추가